hide prospect search in user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -79,10 +79,10 @@
 					Prospects</h4>
 	  		</div>
 	  		<div class="col-md-6">
-		  		<%= form_tag(prospects_path, :method => "get", id: "search-form") do %>
-						<%= text_field_tag :search, params[:search], placeholder: "Search Prospects" %>
-						<%= submit_tag "Search", class:"btn btn-slate btn-sm" %>
-					<% end %>
+		  		<%#= form_tag(prospects_path, :method => "get", id: "search-form") do %>
+						<%#= text_field_tag :search, params[:search], placeholder: "Search Prospects" %>
+						<%#= submit_tag "Search", class:"btn btn-slate btn-sm" %>
+					<%# end %>
 	  		</div>
 	  	</div>
 	  </div>
