--- a/app/views/users/group_message.html.erb
+++ b/app/views/users/group_message.html.erb
@@ -1,18 +1,22 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-6 col-md-offset-3">
 	<div class="panel panel-gray">
 	  <div class="panel-heading">
-			<h4>Send Email Message to Your Entire Downline</h4>
+			<h4>Send Email Message to Your Entire Group</h4>
 	  </div>
 	  <div class="prospect-show">
 
-        <%= form_tag group_message_path, method: :post do %>
-        <div class='form-group'>
-          <strong>Subject:</strong><br>
-          <%= text_field_tag 'subject', '', class: 'form-control'%>
+      <p><strong>From:</strong> <%= current_user.advisor_name %> < <%= current_user.email %>></p>
 
-          <strong>Body:</strong><br>
-          <%= cktext_area :body, '', cols: 40, name: 'body', ckeditor: { toolbar: 'mini' } %>
-        </div>
+      <p><strong>To:</strong> Entire group (individual emails)</p>
+
+      <%= form_tag group_message_path, method: :post do %>
+      <div class='form-group'>
+        <strong>Subject:</strong><br>
+        <%= text_field_tag 'subject', '', class: 'form-control'%>
+
+        <strong>Body:</strong><br>
+        <%= cktext_area :body, '', cols: 40, name: 'body', ckeditor: { toolbar: 'mini' } %>
+      </div>
     </div>
     <div class="panel-footer">
       <div class="form-actions center">
