update marketing steps to sale and Q&A

--- a/app/views/pages/cps_answers.html.erb
+++ b/app/views/pages/cps_answers.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-10 col-md-offset-1">
 
       <h3>Commercial Payments Solutions (Virtual Card Payments) Q & A</h3>
-      <p><em>Watch for many updates coming throughout June 2019</em></p>
+      <p><em>Watch for updates</em></p>
       
       <p>&nbsp;</p>
        <p><strong><font color="#333333" face="Helvetica, sans-serif">Might my suppliers raise my prices to cover the credit card processing fee?</font></strong><br></p>
@@ -60,7 +60,7 @@
       
       <p><strong><font color="#333333" face="Helvetica, sans-serif">How does virtual card work with my accounting system or ERP?</font></strong><br></p>
       
-      <p><font color="#333333" face="Helvetica, sans-serif">Your accounting system already generates payment files. Virtual card technology simply directs these payment files to ride on the Visa or MasterCard systems. There are only two requirements for this to work:</font><br></p>
+      <p><font color="#333333" face="Helvetica, sans-serif">Your accounting system already generates payment files. Virtual card technology simply directs these payment files to ride on the Visa Card system. There are only two requirements for this to work:</font><br></p>
       
       <p><font color="#333333">1.<font style="font-size: 9px;" face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></font> <font color="#333333" face="Helvetica, sans-serif">Your accounting system must be able to produce a payment file with the Merchant/Supplier ID, Invoice Number, Invoice Date and Invoice Amount.</font><br></p>
       
@@ -81,7 +81,7 @@
       
       <p><strong><font color="#333333" face="Helvetica, sans-serif">What's the difference between using a Rewards Credit Card and Virtual Card Payments?</font></strong><br></p>
       
-      <p><font color="#333333" face="Helvetica, sans-serif">Virtual Card Payments are made through the organization’s existing accounting software and remittance is sent to the supplier with the payment.&nbsp; If they have 500 suppliers being paid through Virtual Cards, they are all paid at the same time, with no manual effort.&nbsp; Virtual Cards use single-use MasterCard numbers so suppliers cannot run them again, and cannot be ran for more than the amount that is being paid.</font><br></p>
+      <p><font color="#333333" face="Helvetica, sans-serif">Virtual Card Payments are made through the organization’s existing accounting software and remittance is sent to the supplier with the payment.&nbsp; If they have 500 suppliers being paid through Virtual Cards, they are all paid at the same time, with no manual effort.&nbsp; Virtual Cards use single-use Visa card numbers so suppliers cannot run them again, and cannot be ran for more than the amount that is being paid.</font><br></p>
       
       <p><font color="#333333" face="Helvetica, sans-serif">Credit cards require providing the card numbers manually, reconciling credit card statements, and having to cancel cards and get a new number every time fraudulent activity occurs, which could be often if paying 500 suppliers with the same card.</font><br></p>
       
