--- a/app/views/pages/cps_steps_to_sale.html.erb
+++ b/app/views/pages/cps_steps_to_sale.html.erb
@@ -1,43 +1,32 @@
 <div class="container pages">
   
-  
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
 
       <h3>Steps to the Virtual Card Payment Sale</h3>
-      <p><em>Watch for many updates coming throughout June 2019</em></p>      
       <p>&nbsp;</p>
       
       <ol type="1">
         <li>Build list of businesses that can benefit from Virtual Card Payments. These would typically be businesses with an annual revenue of over $100 Million, since we are looking for over $40 Million in accounts payable.<br>
+          <br></li>
+        <li>Contact CFOs, Controllers, AP Managers, etc. and either give an elevator pitch or use the high level intro presentation.<br>
         <br></li>
-      
-        <li>Contact CFOs, Controllers, AP Managers, etc. and either schedule a one-on-one presentation or invite to a webinar about how Virtual Card Payments will reduce AP per invoice processing costs and generate revenue with each invoice paid.<br>
-        <br>
-        If inviting to a webinar, it is extremely important that you contact your prospect, just prior to the webinar, to remind them to attend.<br>
+        <li>At the end of your elevator pitch or intro presentation, close for scheduling a 2nd, more in depth, presentation where a subject Matter Expert (SME) at Priority Commercial Payments will go deep and also answer all of their questions.  We'll refer to this as the SME presentation.  If you are asked a question that you cannot answer, just let them know that you we will answer any and all of their questions on this in depth presentation.  In fact, thy should invite any and all memebers of their team who would have the best questions.<br>
+          <br></li>
+        <li>Use the Calendly scheduling link to schedule this presentation with the SME. 
+        Be sure to enter your information as well as your prospects information.  Enter Your Name and Your Email address and then click on "+ Additional guests" and enter your prospect's email address. Then complete the remainder of the form.<br>
+          <br></li>
+        <li>Emails will be automatically sent to you and to your prospective client with the screenshare link for the SME meeting. <em>This will be your client and you need to manage the relationship, so you must join either, at the client's location, or online for this presentation.</em><br>
+          <br></li>
+        <li>Enter the prospect in the Aspire CRM<br>
         <br></li>
-      
-        <li>Intro presentation (two scripted Powerpoint overview presentations are available)<br>
-      
-          <ol type="a">
-            <li>A One-on-one presentation is conducted, and at the conclusion of the presentation, the presenter closes for the Supplier Match presentation and platform demo date and time. By scheduling the SM presentation/demo at the end of this initial presentation, you are creating urgency in providing the supplier data.<br>
-            <br>
-            The presenter should get the name, phone extension, and email address, of the person who will be getting the supplier data for you. Email this data contact with instructions and the supplier data template.<br>
-            <br></li>
-      
-            <li>After a webinar is conducted; the presenter discusses next step as: providing the data needed to conduct a supplier match and conducting Supplier Match presentation and platform demo.<br>
-            <br>
-            Since it is not possible for the presenter to schedule individual Supplier Match presentations/demos in a webinar, it is imperative that you call your prospect immediately after the webinar to answer any questions and schedule the Supplier Match presentation and platform demo.<br>
-            <br>
-            If you cannot answer a question that you are asked, that is ok, just let them know that you will get back to them with the answer and continue to schedule the Supplier Match presentation and platform demo.<br>
-            <br>
-            Get the name, phone extension, and email address, of the person who will be getting the supplier data for you. Email this data contact with instructions and the supplier data template.</li>
-          </ol><em>Note that we are scheduling an arbitrary date at this point, to keep the ball rolling and create urgency in providing the data. The actual Supplier Match presentation and platform demo date is to be scheduled, only after receipt of the supplier data.</em><br>
-          <br>
-        </li>
-      
-        <li>Upon receipt of the supplier data, call the prospect and let them know that you received the data and reschedule the Supplier Match presentation and platform demo. If you have not been speaking with the CFO (decision maker) up to this point, be sure to ask your prospect to have the CFO in attendance for this presentation. Ask for the CFOs name and email address so that an invitation can be sent to them as well. Include link to overview video when sending invitations to people who did not attend the overview presentation. “What’s this all about” We really do not want to conduct this presentation demo without the decision maker.<br>
-        <br></li>
+        <li>The SME presentation is conducted, and at the conclusion of the presentation, the presenter will ask for supplier data needed for a Supplier Match presentation.<br>
+          <br></li>
+        <li>You must go ahead and schedule the Supplier Match and Platform demo before ending the presentation. <em>By scheduling the Supplier Match & Platform demo at the end of this initial presentation, you are creating urgency in providing the supplier data.  Note that we are scheduling an arbitrary date at this point, to keep the ball rolling and create urgency in providing the data. The actual Supplier Match presentation and platform demo date is to be scheduled, only after receipt of the supplier data. You should also obtain the name, phone extension, and email address, of the person who will be getting the supplier data for you.</em><br>
+          <br></li>
+
+        <li>Upon receipt of the supplier data, call the prospect and let them know that you received the data and reschedule the Supplier Match presentation and platform demo. If you have not been speaking with the CFO (decision maker) up to this point, be sure to ask your prospect to have the CFO in attendance for this presentation. Ask for the CFOs name and email address so that an invitation can be sent to them as well. You might include link to overview video when sending invitations to people who did not attend the overview presentation. We really do not want to conduct this presentation demo without the decision maker.<br>
+          <br></li>
       
         <li>The Supplier Match presentation and platform demo is conducted. This includes a:
       
@@ -51,7 +40,6 @@
             <li>Review of the agreement</li>
           </ul>This presentation concludes with the presenter scheduling the kick off call.<br>
           <br>
-          <!-- <ul>       <li>Presenter will go through online calendaring system (Calendly), with prospect on screenshare, to schedule the call.</li>     </ul> -->
         </li>
       
         <li>An agreement is created and sent to prospect for electronic signature.<br>
@@ -66,12 +54,11 @@
         <li>A kick off call is conducted<br>
         <br></li>
       
-        <li>Client is setup and the enrollment team starts contacting the suppliers to enroll in virtual card payments. All suppliers will be contacted and an average of 4 to 5 calls will be placed, per supplier.<br>
-        <br>
-        Since most organizations are seeking to move as many suppliers as possible to electronic payments, at the clients’ request, the enrollment team may ask suppliers who paid by check and who does not wish to accept Virtual Cards, if they would be willing to accept ACH for their customer. This value-added service is available at no cost to the client and further reduces their per invoice processing costs.<br>
+        <li>Client is setup and the enrollment team starts contacting the suppliers to enroll in their acceptance of virtual card payments. All suppliers will be contacted.<br>
+          <br>Since most organizations are seeking to move as many suppliers as possible to electronic payments, at the clients’ request, the enrollment team may ask suppliers who paid by check and who does not wish to accept Virtual Cards, if they would be willing to accept ACH for their customer. This value-added service is available at no cost to the client and further reduces their per invoice processing costs.<br>
         <br></li>
       
-        <li>Once implemented: your clients start saving money on processing costs and receiving a quarterly rebate, and you will be paid each month, on every virtual card payment made.</li>
+        <li>Once implemented: your clients start saving money on processing costs and receiving a monthly rebate, and you will be paid each month, on every virtual card payment made.</li>
       </ol>
   
     </div>
