--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,31 @@
 
-<%# if current_user.group == "bc" || current_user.group == "all" %>
-  
   <div class="container pages">
-
     <div class="row">
-      <div class="col-md-8 col-md-offset-1">
-        <h3>Accounts Payable Campaign Parameters</h3>
-        <p><strong>$10M Minimum AP Spend</strong></p>
-        <p>Target:  200+ Employees and $50M+ Revenue<br>
-        Titles: C-level & Director level Finance Execs (CFO and similar)</p>
+      <div class="col-md-10 col-md-offset-1">
+        <p><em>Watch for updates</em></p>    
       </div>
     </div>
     
-    <hr>
+    <div class="row">
+      <div class="col-md-5 col-md-offset-1">
+        <h3>My Manager</h3>
+        <p><%= render html: my_manager.html_safe %></p>
+      </div>
+      
+      <div class="col-md-5">
+        <h3>Accounts Payable Campaign Parameters</h3>
+        <p><strong>$10M Minimum AP Spend</strong>  Target C-level & Director level Finance Execs (CFO, Controller, AP Director, etc.) at organizations with $50M+ in Revenue or 200+ Employees.</p>
+      </div>
+    </div>
+
+    <p>&nbsp;</p>
+        
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <h3>Two Sentence Elevator Pitch</h3>
+        <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, paying all suppliers from a single payment file.  Suppliers choose how they want to be paid, and your organization earns revenue when making the payments.</p>
+      </div>
+    </div>
 
     <p>&nbsp;</p>
     
@@ -37,114 +50,6 @@
     </div>
     
     <p>&nbsp;</p>
-      
-    <div class="row">
-      <div class="col-md-8 col-md-offset-1">
-        <h3>Marketing Videos</h3>
-      </div>
-    </div>
-  
-      <div class="col-md-10 col-md-offset-1 dark-box">
  
-      <div class="row">
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-  
-        <div class="col-md-6">
-          <h4>Short Overview Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/272852660</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/272852660</a><br>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/272852660" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      
-    <p>&nbsp;</p>
-    <hr>
-    <p>&nbsp;</p>
 
-     
-      <div class="row">
-        <div class="col-md-6">
-          <h4>Short Animated Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/320860659</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/320860659</a>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320860659" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>      
-        
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-
-    <p>&nbsp;</p>
-    <hr>
-    <p>&nbsp;</p>
-      
-      <div class="row">
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-  
-        <div class="col-md-6">
-          <h4>Short Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/247426096" target="_blank" style="">https://player.vimeo.com/video/320861285</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/247426096" target="_blank" style="">https://vimeo.com/320861285</a>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320861285" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
   </div>
-  
-
-<%# else %>
-  <!--Wrong Group-->
-<%# end %>
