add last updated to static pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container pages">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <p><em>Watch for updates</em></p>    
+        <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
       </div>
     </div>
     
