--- a/app/views/pages/marketing.html.erb
+++ b/app/views/pages/marketing.html.erb
@@ -1,5 +1,11 @@
 <div class="container pages">
 
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+    </div>
+  </div>
+
   <p>&nbsp;</p>
   
   <% if current_user.group == "cc" || current_user.user_code == "cc" %>
