--- a/app/views/pages/cps_answers.html.erb
+++ b/app/views/pages/cps_answers.html.erb
@@ -2,10 +2,13 @@
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
+      <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
       <h3>Commercial Payments Solutions (Virtual Card Payments) Q & A</h3>
-      <p><em>Watch for updates</em></p>
-      
       <p>&nbsp;</p>
        <p><strong><font color="#333333" face="Helvetica, sans-serif">Might my suppliers raise my prices to cover the credit card processing fee?</font></strong><br></p>
       
