--- a/app/views/pages/cps_steps_to_sale.html.erb
+++ b/app/views/pages/cps_steps_to_sale.html.erb
@@ -1,5 +1,10 @@
 <div class="container pages">
-  
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
 
