--- a/app/views/pages/cps_training_vids.html.erb
+++ b/app/views/pages/cps_training_vids.html.erb
@@ -1,7 +1,12 @@
 <div class="container pages">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p><em>Updated on 5/20/19 - Watch for updates</em></p>    
+    </div>
+  </div>
 
   <div class="row">
-    <div class="col-md-8 col-md-offset-1">
+    <div class="col-md-10 col-md-offset-1">
       <h3>Training Videos</h3>
     </div>
   </div>
