Fix manager on pages helper and update home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container pages">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <p><em>Updated on 7/24/19 - Watch for updates</em></p>    
+        <p><em>Updated on 7/25/19 - Watch for updates</em></p>    
       </div>
     </div>
     
@@ -42,6 +42,7 @@
       
       <div class="col-md-5">
         <h3>Schedule Presentation</h3>
+        Schedule a presentation for your client with an expert at Priority Commercial Payments:
           <%= render html: calendly_link.html_safe %>
       </div>
     
