update elevator pitch

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h3>Two Sentence Elevator Pitch</h3>
-        <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, paying all suppliers from a single payment file.  Suppliers choose how they want to be paid, and your organization earns revenue when making the payments.</p>
+        <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.</p>
       </div>
     </div>
 
@@ -33,11 +33,9 @@
       <div class="col-md-5 col-md-offset-1">
 
         <h3>Sales Tools</h3>
-        <ul>
-          <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
-          <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
-          <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
-        </ul>
+        <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
+        <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
+        <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
       </div>
       
       <div class="col-md-5">
