add training vid

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,52 +1,51 @@
-
-  <div class="container pages">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <p><em>Updated on 7/25/19 - Watch for updates</em></p>    
-      </div>
+<div class="container pages">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <em>Updated on 7/25/19 - Watch for updates</em> 
     </div>
-    
-    <div class="row">
-      <div class="col-md-5 col-md-offset-1">
-        <h3>My Manager</h3>
-        <p><%= render html: my_manager.html_safe %></p>
-      </div>
-      
-      <div class="col-md-5">
-        <h3>Accounts Payable Campaign Parameters</h3>
-        <p><strong>$10M Minimum AP Spend</strong>  Target C-level & Director level Finance Execs (CFO, Controller, AP Director, etc.) at organizations with $50M+ in Revenue or 200+ Employees.</p>
-      </div>
-    </div>
-
-    <p>&nbsp;</p>
-        
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <h3>Two Sentence Elevator Pitch</h3>
-        <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.</p>
-      </div>
-    </div>
-
-    <p>&nbsp;</p>
-    
-    <div class="row">
-      <div class="col-md-5 col-md-offset-1">
-
-        <h3>Sales Tools</h3>
-        <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
-        <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
-        <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
-      </div>
-      
-      <div class="col-md-5">
-        <h3>Schedule Presentation</h3>
-        Schedule a presentation for your client with an expert at Priority Commercial Payments:
-          <%= render html: calendly_link.html_safe %>
-      </div>
-    
-    </div>
-    
-    <p>&nbsp;</p>
- 
-
   </div>
+  
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+      <h3>My Manager</h3>
+      <%= render html: my_manager.html_safe %>
+    </div>
+    
+    <div class="col-md-5">
+      <h3>Accounts Payable Campaign Parameters</h3>
+      <strong>$10M Minimum AP Spend</strong>  Target C-level & Director level Finance Execs (CFO, Controller, AP Director, etc.) at organizations with $50M+ in Revenue or 200+ Employees.
+    </div>
+  </div>
+
+  <p>&nbsp;</p>
+      
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h3>Two Sentence Elevator Pitch</h3>
+      We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.
+    </div>
+  </div>
+
+  <p>&nbsp;</p>
+  
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+
+      <h3>Sales Tools</h3>
+      <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
+      <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
+      <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
+    </div>
+    
+    <div class="col-md-5">
+      <h3>Schedule Presentation</h3>
+      Schedule a presentation for your client with an expert at Priority Commercial Payments:
+        <%= render html: calendly_link.html_safe %>
+    </div>
+  
+  </div>
+  
+  <p>&nbsp;</p>
+
+
+</div>
