--- a/app/views/pages/cps_training_vids.html.erb
+++ b/app/views/pages/cps_training_vids.html.erb
@@ -11,31 +11,41 @@
     </div>
   </div>
 
-  <div class="row">
     <div class="col-md-6">
-      <div class="embed-responsive embed-responsive-4by3 clearfix">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/350208795" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <p>&nbsp;</p>
+    </div> 
+
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/342380630" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-    </div>
+      <p>&nbsp;</p>
+    </div> 
+
     <div class="col-md-6">
-      <div class="embed-responsive embed-responsive-4by3 clearfix">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337396254" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-    </div>
-  </div>
+      <p>&nbsp;</p>
+    </div> 
 
-  <div class="row">
     <div class="col-md-6">
-      <div class="embed-responsive embed-responsive-4by3 clearfix">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337346213" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
+      <p>&nbsp;</p>
     </div>
+    
     <div class="col-md-6">
-      <div class="embed-responsive embed-responsive-4by3 clearfix">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/337349065" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-    </div>
-  </div>
+      <p>&nbsp;</p>
+    </div> 
+
 
   <p>&nbsp;</p>
 
