--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -442,3 +442,10 @@ hr {
     border-width: 1px;
     border-color: #62929E;
 }
+
+
+div.license-agreement {
+    width: 100%;
+    height: 200px;
+    overflow:auto;
+}
