change agreement background color

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,13 +5,11 @@
 	  </div>
 	  <div class="prospect-show">
 
+      <h5 style="text-align:center;"><strong>Please read the following agreement and electronically sign by completing and selecting agree.<br>
+      <br>
+        Upon completion and agreement you will be given access to the Aspire back office.</em></strong></h5>
+
       <div class="license-agreement">
-  
-        <h5 style="text-align:center;"><strong></em>Please read the following agreement and electronically sign by completing and selecting agree.<br>
-        <br>
-          Upon completion and agreement you will be given access to the Aspire back office.</em></strong></h5>
-        <p>&nbsp;</p>
-  
         <p align="center"><strong>AGENT AGREEMENT</strong></p>
         
         <p align="center"><em>Exclusively for Aspire Partners</em></p>
@@ -129,8 +127,7 @@
         <p>I understand that by entering my name and address below, I am electronically signing this agreement and that checking the agreement acknowledgement box constitutes a legal signature confirming that I acknowledge and agree to the above Terms of Acceptance.</p>
 	    
       </div>	    
-    
-      <p>&nbsp;</p>
+
 	    
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
