add warm market appointment setting script to home page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,8 +12,6 @@
       <div class="license-agreement">
         <p align="center"><strong>AGENT AGREEMENT</strong></p>
         
-        <p align="center"><em>Exclusively for Aspire Partners</em></p>
-        
         <p>THIS INDEPENDENT AGENT AGREEMENT (the “Agreement”) is entered into effective as of this day (the “Effective Date”) by and between HAC Enterprises LLC, doing business as Aspire Partners herein referred to as “ASPIRE", and Contractor, herein referred to as “AGENT”.&nbsp; ASPIRE and AGENT shall be referred to individually as a “Party” or collectively as the “Parties”.</p>
         
         <p>WHEREAS, AGENT desires to refer organizations (“End Users”) that will utilize the services being sold by Aspire. A “referral” is where AGENT, at a minimum, coordinates the initial sales meeting and personally introduces the potential End Users to Aspire after having familiarized the Services to the same potential End User beforehand. A “Referred” End User is a referral, as defined above, that signs the Program Master Services Agreement (the “MSA”); for Referred End Users, the AGENT will earn the appropriate consideration as shown in Exhibit A ; provided, however, that, if there is ever a question as to whether an End User was referred by AGENT, Aspire has complete and final determination; and</p>
@@ -118,7 +116,10 @@
         
         <p>IN WITNESS WHEREOF the parties have executed this Agreement on the date set forth below.</font></p>
 
-        <p><br></p>
+      </div>
+      <p>&nbsp;</p>
+      <div class="license-agreement">
+
         <p align="center"><strong>EXHIBIT A&nbsp; - COMPENSATION ADDENDUM</strong></p>
         <p><strong>I.&nbsp;&nbsp; Commercial Payments</strong></p>
         <p>Aspire's Partner provides Commercial Payment Services that reduce an organizations AP operating expenses, saving them time and money, and generates revenue when paying their suppliers and vendors. Aspire shall pay AGENT a “Revenue Share” based on the aggregate volume of Referred End Users’ Accounts Payable spend through Virtual Card Payments.<br>
