--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,13 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h3>Two Sentence Elevator Pitch</h3>
-      We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.
+      <p>We help organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file.  Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.</p>
+      <p>&nbsp;</p>
+      
+      <p><strong>If scheduling with someone that you know… you might say the following…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations like yours to reduce their Accounts Payable operating costs, by automating 100% of your AP, with multiple forms of electronic payments, and paying ALL suppliers from a SINGLE payment file. Your suppliers choose how they want to be paid, and your organization gets money back every time you make a payment to those suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
+
+      <p><strong>Or shorter version…</strong> "I'm working with a large publicly traded commercial payments provider that's helping organizations reduce their Accounts Payable operating costs and generate revenue back to their company every time they make a payment to their suppliers.  I'd love to setup a quick call with you and one of the AP experts to share how they do this, and we can hop on a screenshare.  Will you be available (day) at (time)?"</p>
+
     </div>
   </div>
 
