--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -114,7 +114,7 @@
         
         <p>Section 6.8. Governing Law, Jurisdiction, etc. This Agreement shall be governed by and construed in accordance with, the laws of the State of Florida. Venue shall be the federal or state courts in Florida.</p>
         
-        <p>IN WITNESS WHEREOF the parties have executed this Agreement on the date set forth below.</font></p>
+        <p>The parties acknowledge that by clicking "I Agree" the parties have executed this Agreement as of this day.</font></p>
 
       </div>
       <p>&nbsp;</p>
