add training video

--- a/app/views/pages/cps_training_vids.html.erb
+++ b/app/views/pages/cps_training_vids.html.erb
@@ -11,7 +11,13 @@
     </div>
   </div>
 
-
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9 clearfix">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/352819470" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <p>&nbsp;</p>
+    </div> 
+    
     <div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9 clearfix">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/351297984" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
