--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,7 +37,8 @@
                 <th>CRM<br>Manager</th>
                 <th>CRM</br>Support</th>
               <% else %>
-			          <th>Notes</th>
+			          <th>Next Action</th>
+			          <th>List Prospects to Schedule</th>
 			       <% end %>
             </tr>
           </thead>
@@ -49,7 +50,7 @@
               	<% if current_user.admin %>              	
               	  <td style="vertical-align:middle"><%= user.state %></td>
               	<% end %>
-              	<td style="vertical-align:middle"><%= user.created_at.strftime("%m/%d/%Y") %></td>
+              	<td style="vertical-align:middle"><%= user.created_at.strftime("%m/%d/%y") %></td>
               	<td style="vertical-align:middle"><%= time_ago_in_words(user.current_sign_in_at) if user.current_sign_in_at %> ago</td>
               	<td style="vertical-align:middle">
               	  <% if !user.manager? || ! user.has_users? %>
@@ -68,9 +69,17 @@
                 	<td style="vertical-align:middle"><% if user.manager == true %><span class="glyphicon glyphicon-ok"></span><% end %></td>
                 	<td style="vertical-align:middle"><% if user.support == true %><span class="glyphicon glyphicon-ok"></span><% end %></td>
               	 <% else %>
-              	  <td width="400"><%= user.notes %></td>    
+              	 
+              	  <td><% if user.user_next_action_date %><%= user.user_next_action_date.strftime("%m/%d/%y") %><% end %> <%= user.user_next_action %></td>
+              	  <td><%= user.list_companies %></td>
                 <% end %>              					      
       		    </tr>
+      		    <% if !current_user.manager %>
+        		    <tr>
+                	<td colspan="6">Notes: <%= user.notes %></td>         		    
+        		    </tr>
+      		    <% end %>
+      		    
         		<% end %>
           </tbody>
         </table>
