add must wait note to group message view

--- a/app/views/users/group_message.html.erb
+++ b/app/views/users/group_message.html.erb
@@ -22,6 +22,7 @@
       <div class="form-actions center">
         <em>Warning: Upon submission, an email will be sent to all agents.</em>
         <%= submit_tag "submit",:value => "Send Email Now", class:"btn btn-danger btn-block" %>
+        <h4>This will take a few seconds - Please wait for screen to advance after submitting.</h4>
       </div>
       <% end %>
 
