--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -75,7 +75,7 @@
                 <% end %>              					      
       		    </tr>
       		    <% if !current_user.manager %>
-      		      <% if user.notes %>
+      		      <% if user.notes? %>
           		    <tr>
                   	<td  style="text-align:left" colspan="6">Notes: <%= user.notes %></td>         		    
           		    </tr>
