--- a/app/views/application/dashboard.html.erb
+++ b/app/views/application/dashboard.html.erb
@@ -6,25 +6,17 @@
 
 		<% if current_user.manager %>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-6">
 					<div class="well dashboard-panel dashboard-bckg-1 ">
-						<h1 align="center"><#%= @prospects.count %></h1>
-						<p>&nbsp;</p>
-						<h4 align="center">Total Prospects in CRM</h4>
-					</div>
-				</div>
-		
-				<div class="col-md-4">
-					<div class="well dashboard-panel dashboard-bckg-2 ">
 						<h1 align="center"><%= @users.count %></h1>
 						<p>&nbsp;</p>
 						<h4 align="center">Total Users in CRM</h4>
 					</div>
 				</div>
 				
-				<div class="col-md-4">
-					<div class="well dashboard-panel dashboard-bckg-1-4">
-						<h3 align="center">Prospects Status:</h4>
+				<div class="col-md-6">
+					<div class="well dashboard-panel dashboard-bckg-2">
+						<h3 align="center">Total Agents Per Manager</h4>
 						<h4>
 							&nbsp; &nbsp; &nbsp; &nbsp; <%= @users.where(group: "cc").count %>&nbsp; Chris Cunningham<br>							
 							&nbsp; &nbsp; &nbsp; &nbsp; <%= @users.where(group: "rs").count %>&nbsp; Robert Sawyer<br>
@@ -36,24 +28,6 @@
 							&nbsp; &nbsp; &nbsp; &nbsp; <%= @users.where(group: "ajrc").count %>&nbsp; Alan Callaghan<br>
 							&nbsp; &nbsp; &nbsp; &nbsp; <%= @users.where(group: "tz").count %>&nbsp; Terri Zielonko<br>						
 							&nbsp; &nbsp; &nbsp; &nbsp; <%= @users.where(group: "td").count %>&nbsp; Thomas DePaola<br>
-					</div>
-				</div>
-			</div>
-		<% else %>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="well dashboard-panel dashboard-bckg-1 ">
-						<h1 align="center"><#%= @prospects.count %></h1>
-						<p>&nbsp;</p>
-						<h4 align="center">Total Prospects in CRM</h4>
-					</div>
-				</div>
-		
-				<div class="col-md-6">
-					<div class="well dashboard-panel dashboard-bckg-2 ">
-						<h1 align="center"><%= @users.count %></h1>
-						<p>&nbsp;</p>
-						<h4 align="center">Total Users in CRM</h4>
 					</div>
 				</div>
 			</div>
